--- a/results/latex/summary.tex
+++ b/results/latex/summary.tex
@@ -1,5 +1,5 @@
 % latex table generated in R 3.6.1 by xtable 1.8-4 package
-% Wed May 12 15:50:40 2021
+% Wed May 12 20:32:32 2021
 \begin{table}[ht]
 \centering
 \begin{tabular}{lr}
@@ -9,6 +9,7 @@ Attributes & Results \\
 Best candidate fitness average & 6.56 \\ 
   Best candidate standard deviation & 0.37 \\ 
   Mean fitness & 7.52 \\ 
+  Total Number Of Generations & 1740.00 \\ 
   Terminated by generation count & 1.00 \\ 
   Elapsed time(Seconds) & 1.68 \\ 
    \hline
